syntax = "proto3";

package user;

message Id { string id = 1; }

message Query {
  repeated string select = 1;
  string where = 2;
  repeated string orderBy = 3;
  int32 limit = 4;
  string before = 5;
  string after = 6;
}

message PageInfo {
  string startCursor = 1;
  string endCursor = 2;
  bool hasNextPage = 3;
  bool hasPreviousPage = 4;
}

message Count { int32 count = 1; }

message User {
  string id = 1;
  string name = 2;
}

service UsersService {
  rpc findUser(Query) returns (stream User) {}
}